# path-tracer

./: .gitignore  Cargo.toml  README.md
examples/: bouncing_spheres.rs  checker.rs  cornell_box.rs  final_scene.rs  image_mapping.rs  simple_light.rs  weekend.rs  wide.rs
src/: camera.rs  color.rs  hittable.rs  lib.rs  onb.rs  random_scene.rs  ray.rs  render.rs  rng.rs  scene.rs  shape.rs
src/hittable/: cuboid.rs  medium.rs  mod.rs  quad.rs  rectangle.rs  sphere.rs  transform.rs
src/material/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs
src/texture/: checker.rs  image.rs  mod.rs  solid_color.rs
