[package]
name = "path-tracer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.24.1", features = ["debug-glam-assert"] }
image = "0.24.6"
indicatif = { version = "0.17.5", features = ["rayon"] }
rand = "0.8.5"
rayon = "1.7.0"
