[package]
name = "path-tracer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.25.0", features = ["debug-glam-assert"] }
image = "0.25.0"
indicatif = { version = "0.17.5", features = ["rayon"] }
rand = "0.8.5"
rayon = "1.7.0"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary
